Bug 478307 - Segfault on opening grayscale WebP
Summary: Segfault on opening grayscale WebP
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.2.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-12-09 15:22 UTC by t_w_
Modified: 2023-12-12 12:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Grayscale WebP created with Krita (40.70 KB, image/webp)
2023-12-09 15:22 UTC, t_w_
Details

Note You need to log in before you can comment on or make changes to this bug.
Description t_w_ 2023-12-09 15:22:51 UTC
Created attachment 164041 [details]
Grayscale WebP created with Krita

Trying to open a grayscale WebP as produced with either Krita or GIMP results in a segfault.

Maybe related: https://bugs.kde.org/show_bug.cgi?id=216110
Comment 1 Freya Lupen 2023-12-09 15:31:57 UTC
Confirmed, here's the crash backtrace:
> 0   libkritapigment.20.0.0.dylib  	       0x107cd370c KoColorSpaceRegistry::permanentColorspace(KoColorSpace const*) + 20 (KoColorSpaceRegistry.cpp:839)
> 1   libkritapigment.20.0.0.dylib  	       0x107c97660 KoColor::KoColor(QColor const&, KoColorSpace const*) + 24 (KoColor.cpp:93) [inlined]
> 2   libkritapigment.20.0.0.dylib  	       0x107c97660 KoColor::KoColor(QColor const&, KoColorSpace const*) + 52 (KoColor.cpp:90)
> 3   kritawebpimport.so            	       0x16b69ee74 KisWebPImport::convert(KisDocument*, QIODevice*, KisPinnedSharedPtr<KisPropertiesConfiguration>) + 980 (kis_webp_import.cpp:96)
Comment 2 wolthera 2023-12-12 12:55:57 UTC
Git commit 1fc417ae3e591142ef8b4f0531368b251dafac9b by Wolthera van Hövell, on behalf of Rasyuqa A. H..
Committed on 12/12/2023 at 13:55.
Pushed by woltherav into branch 'master'.

WebP: properly assign profile when importing image with non-RGBA model

M  +30   -1    plugins/impex/webp/kis_webp_import.cpp

https://invent.kde.org/graphics/krita/-/commit/1fc417ae3e591142ef8b4f0531368b251dafac9b
Comment 3 wolthera 2023-12-12 12:57:36 UTC
Git commit 24c985bda8957da9a817274d0af65db7e4f3e47c by Wolthera van Hövell tot Westerflier, on behalf of Rasyuqa A. H..
Committed on 12/12/2023 at 13:57.
Pushed by woltherav into branch 'krita/5.2'.

WebP: properly assign profile when importing image with non-RGBA model

M  +30   -1    plugins/impex/webp/kis_webp_import.cpp

https://invent.kde.org/graphics/krita/-/commit/24c985bda8957da9a817274d0af65db7e4f3e47c