WebP: properly assign profile when importing image with non-RGBA model

BUG: 478307